# tiny-turboquant

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
benchmarks/: bench_ann.py  bench_kv_real.py
demos/: demo1_distortion_vs_theory.py  demo2_ann_vs_pq.py  demo3_real_embeddings.py  demo4_kv_cache.py
examples/: rag_synthetic_medium.py
tests/: test_tiny_turboquant.py
tiny_turboquant/: __init__.py  attention.py  attention_perf.py  bitpack.py  cli.py  codebooks.py  fused_attention.py  fwht.py  kv_bench.py  kv_cache.py  kv_estimator.py  kv_presets.py  layout.py  metrics.py  numpy_reference.py  outlier_split.py  quantizer.py  rag.py  rotation.py  serving.py  serving_sim.py  vector_index.py
